# ITER

./: .gitignore  MODEL.md  Makefile  README.md  convert.py  crossval.py  evaluate.py  make_readme.py  pyproject.toml  train.py
cfg/: ace05.json  ace05_t5d_as_dec.json  ade.template.json  conll03.json  conll04.json  conll04_dev.json  custom.json  genia.json  nyt.json  scierc.json
cfg/ace05/: bert.json  ce_loss.json  d_ff_1500.json  d_ff_4096.json  dev_symrel.json  hpo.json  hpo_albert.json  hpo_bart.json  hpo_deberta.json  inverse_sqrt.json  neg_link_type.json  no_cross_info.json  small_lr.json  small_lr_symrel.json  symrel.json  symrel_negsample.json  symrel_negsample_no_cross_info.json  symrel_only.json
cfg/ade/: small_lr.template.json  small_lr_d_ff_4096.template.json
cfg/conll03/: d_ff_150.json  d_ff_1500.json  d_ff_4096.json  dev.json  sentlvl.json  small_lr.json  throughput.json
cfg/conll04/: large.json  negsample.json  small_lr.json  small_lr_negsample.json  throughput.json
cfg/custom/: custom_nest_depth.json
cfg/genia/: filtered.json  filtered_entities_test.json  filtered_test.json  flant5_large.json  small_lr.json  small_lr_d_ff_150.json
cfg/scierc/: d_ff_150.json  hpo.json  hpo_res.json  scifive.json  small_lr.json  small_lr_d_ff_4096.json  small_lr_symrel.json  small_lr_symrel_d_ff_1500.json  (+3 more)
iter/: __init__.py  configuration_iter.py  generation_utils.py  modeling_features.py  modeling_iter.py  modeling_iter2.py  modeling_iter2.pyi  optimizing_iter.py  utils.py
scripts/: ckptinfo  compare_datasets.py  convert_features  find_optimal_lambda.py  find_optimal_nest_depth.py  get_feature_flag.py  param_counts  run_experiment  run_smac  setup_screens  token_counts  upload_model.py
smac3/: config.yaml  short_config.yaml  tiny_config.yaml
(+38 files in other folders)
